# example-webservers-py

./: README.md
django-webserver/: README.md  pyproject.toml
django-webserver/src/django_webserver/: views.py
fastapi-webserver/: README.md  pyproject.toml
fastapi-webserver/src/: webserver.py
flask-webserver/: README.md  pyproject.toml
flask-webserver/src/: webserver.py
